hphp/hack/test/typecheck/instanceof/instanceof_parent_outside.php
<?hh // strict

function f(mixed $x): void {
  if ($x instanceof parent) {
    echo 'huh?';
  }
}
